# SignalProcessor

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: 01.01_MT_Correcion_senales.md  01.02_MT_Escalamiento_sismico.md  01_Marco_teorico.md
examples/: 01_correccion_filtrado.py  02_parametros_espectro.py  03_escalamiento_lineal.py  04_escalamiento_suite.py  05_ajuste_espectral_rapido.py  README.md
examples/config/: correction.json  default.toml  match_lima.toml  process_lima.toml  scale_lima.toml  scaling.json  suite_scaling.toml
examples/data/benchmark/: ATICOEW.txt  ATICONS.txt  LIMANS.txt
examples/data/motion/: ATICONS.csv  LIMAEW.csv  LIMANS.csv  TARAPACAEW.csv  TARAPACANS.csv
examples/data/response_spectrum/: EPU_475.csv
libs/REQPY/: README.md  setup.py
libs/REQPY/examples/: Example 1 - SingleComponentMatchingExample.py  Example 3 - TwoComponentRotDnnMatchingExample.py  Example 5 - PSA_PSD_Matching.py  Example 6 - PSA_FAS_PSD_Matching.py  RSN175_IMPVALL.H_H-E12140_ASCE7_Matched.AT2  RSN175_IMPVALL.H_H-E12140_ASCE7_Matched_1col.txt  RSN175_IMPVALL.H_H-E12140_ASCE7_Matched_2col.txt  WUS_M7.5_R75_Frequencies.txt  WUS_M7.5_R75_SD575_12.50s.txt
libs/REQPY/reqpy_M/: __init__.py
libs/prism/: LICENSE.md  build.xml  code.json
libs/prism/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
notebooks/: 01_correccion_filtrado.ipynb  01_correccion_senales.ipynb  02_escalamiento_lineal.ipynb  02_escalamiento_sismico.ipynb  02_parametros_espectro.ipynb  03_ajuste_espectral_wavelet.ipynb  03_benchmarks.ipynb  03_escalamiento_lineal.ipynb  04_benchmarks.ipynb  04_escalamiento_suite.ipynb  05_ajuste_espectral_rapido.ipynb  06_benchmark_seismomatch.ipynb  README.md
src/signalprocessor/: __init__.py  _core.py  _core_cy.pyx  baseline.py  benchmark.py  cli.py  config.py  constants.py  core.py  correction.py  filtering.py  integration.py  io.py  matching.py  metrics.py  motion.py  plotting.py  preprocessing.py  processing.py  recommendation.py  records.py  scaling.py  spectra.py  types.py  units.py
src/sismosignal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_benchmark.py  test_core.py  test_correction.py  test_features.py  test_io_metrics.py  test_io_scaling.py  test_metrics.py  test_processing.py  test_recommendation.py  test_scaling.py
(+299 files in other folders)
