[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SignalProcessor"
version = "0.1.0"
description = "Procesamiento rapido de acelerogramas: correccion, filtrado, espectros y escalamiento sismico."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Joel Alarcon" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "numba>=0.61",
    "tomli>=2.0; python_version<'3.11'",
]

