[build-system]
requires = ["setuptools>=68", "wheel", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "SignalProcessor"
version = "0.1.0"
description = "Procesamiento rapido de acelerogramas: correccion, filtrado, espectros y escalamiento sismico."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Joel Alarcon" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "numba>=0.61",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
cython = ["Cython>=3.0"]
notebooks = ["jupyter>=1.0", "nbformat>=5.9"]
dev = ["pytest>=8.0", "Cython>=3.0", "jupyter>=1.0", "nbformat>=5.9"]

[project.scripts]
signalprocessor = "signalprocessor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
signalprocessor = ["*.pyx", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
